converted InfoRoomOccupation into a wrapper of RoomOccupation converted InfoExecutionCourse into a wrapper of ExecutionCourse