@@ -16,7 +16,6 @@ import net.sourceforge.fenixedu.applicationTier.IUserView;
 import net.sourceforge.fenixedu.applicationTier.Filtro.exception.FenixFilterException;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.dataTransferObject.InfoAnnouncement;
-import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionCourse;
 import net.sourceforge.fenixedu.dataTransferObject.InfoSite;
 import net.sourceforge.fenixedu.framework.factory.ServiceManagerServiceFactory;
 import net.sourceforge.fenixedu.presentationTier.Action.base.FenixAction;
@@ -53,10 +52,7 @@ public class ReadSite extends FenixAction {
 
         try {
 
-            InfoExecutionCourse infoExecutionCourse = new InfoExecutionCourse();
-            infoExecutionCourse.setIdInternal(new Integer(request.getParameter("objectCode")));
-
-            Object[] args = { infoExecutionCourse };
+            Object[] args = { Integer.valueOf(request.getParameter("objectCode")) };
             try {
                 site = (InfoSite) ServiceUtils.executeService(userView, "ReadExecutionCourseSite", args);
             } catch (FenixServiceException e) {
